--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
     "@react-native-masked-view/masked-view": "0.2.6",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "6.0.11",
     "axios": "^0.24.0",
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-vector-icons": "^9.0.0",
     "react-navigation": "4.4.4",
     "react-navigation-stack": "2.10.4"
   },
